tests/rosetta/transpiler/Scala/cramers-rule.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/cramers-rule.scala:62: error: type mismatch;
 found   : Double(1.0)
 required: scala.math.BigInt
        sign = sign * (BigInt(0) - 1.0)
                                   ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cramers-rule.scala:86: error: type mismatch;
 found   : Double(1.0)
 required: scala.math.BigInt
    val m: ArrayBuffer[ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(2.0, BigInt(0) - 1.0, 5.0, 1.0), ArrayBuffer(3.0, 2.0, 2.0, BigInt(0) - 6.0), ArrayBuffer(1.0, 3.0, 3.0, BigInt(0) - 1.0), ArrayBuffer(5.0, BigInt(0) - 2.0, BigInt(0) - 3.0, 3.0))
                                                                                       ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cramers-rule.scala:86: error: type mismatch;
 found   : Double(6.0)
 required: scala.math.BigInt
    val m: ArrayBuffer[ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(2.0, BigInt(0) - 1.0, 5.0, 1.0), ArrayBuffer(3.0, 2.0, 2.0, BigInt(0) - 6.0), ArrayBuffer(1.0, 3.0, 3.0, BigInt(0) - 1.0), ArrayBuffer(5.0, BigInt(0) - 2.0, BigInt(0) - 3.0, 3.0))
                                                                                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cramers-rule.scala:86: error: type mismatch;
 found   : Double(1.0)
 required: scala.math.BigInt
    val m: ArrayBuffer[ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(2.0, BigInt(0) - 1.0, 5.0, 1.0), ArrayBuffer(3.0, 2.0, 2.0, BigInt(0) - 6.0), ArrayBuffer(1.0, 3.0, 3.0, BigInt(0) - 1.0), ArrayBuffer(5.0, BigInt(0) - 2.0, BigInt(0) - 3.0, 3.0))
                                                                                                                                                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cramers-rule.scala:86: error: type mismatch;
 found   : Double(2.0)
 required: scala.math.BigInt
    val m: ArrayBuffer[ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(2.0, BigInt(0) - 1.0, 5.0, 1.0), ArrayBuffer(3.0, 2.0, 2.0, BigInt(0) - 6.0), ArrayBuffer(1.0, 3.0, 3.0, BigInt(0) - 1.0), ArrayBuffer(5.0, BigInt(0) - 2.0, BigInt(0) - 3.0, 3.0))
                                                                                                                                                                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cramers-rule.scala:86: error: type mismatch;
 found   : Double(3.0)
 required: scala.math.BigInt
    val m: ArrayBuffer[ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(2.0, BigInt(0) - 1.0, 5.0, 1.0), ArrayBuffer(3.0, 2.0, 2.0, BigInt(0) - 6.0), ArrayBuffer(1.0, 3.0, 3.0, BigInt(0) - 1.0), ArrayBuffer(5.0, BigInt(0) - 2.0, BigInt(0) - 3.0, 3.0))
                                                                                                                                                                                                                                               ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cramers-rule.scala:87: error: type mismatch;
 found   : Double(3.0)
 required: scala.math.BigInt
    val v: ArrayBuffer[Double] = ArrayBuffer(BigInt(0) - 3.0, BigInt(0) - 32.0, BigInt(0) - 47.0, 49.0)
                                                         ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cramers-rule.scala:87: error: type mismatch;
 found   : Double(32.0)
 required: scala.math.BigInt
    val v: ArrayBuffer[Double] = ArrayBuffer(BigInt(0) - 3.0, BigInt(0) - 32.0, BigInt(0) - 47.0, 49.0)
                                                                          ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cramers-rule.scala:87: error: type mismatch;
 found   : Double(47.0)
 required: scala.math.BigInt
    val v: ArrayBuffer[Double] = ArrayBuffer(BigInt(0) - 3.0, BigInt(0) - 32.0, BigInt(0) - 47.0, 49.0)
                                                                                            ^
9 errors found
